--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 #
-# $Id$
+# $Id: Changes,v 0.1 2010/08/22 19:58:45 dankogai Exp dankogai $
 # 
 
-$Revision$ $Date$
+$Revision: 0.1 $ $Date: 2010/08/22 19:58:45 $
 + *
   First release.
